api-itms/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itms-api-deployment
  namespace: xconnected
spec:
  replicas: 5
  selector:
    matchLabels:
      app: itms-api
  template:
    metadata:
      labels:
        app: itms-api
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: itms-api
        image: xconnected/components:itms-api-2.5
        imagePullPolicy: Always
        args:
        - uvicorn 
        - main:app
        - --host
        - "0.0.0.0"
        - --port
        - "8000"
