api-itms/service.yml
apiVersion: v1
kind: Service
metadata:
  name: itms-api-service
  namespace: xconnected
spec:
  ports:
    - port: 8000
  selector:
    app: itms-api
